--- a/core/slides/spark-standalone.qmd
+++ b/core/slides/spark-standalone.qmd
@@ -1,14 +1,7 @@
 ---
 title: "Spark standalone"
-
-format:
-  revealjs: 
-    footer: |
-      [Spark Standalone](https://stephane-v-boucheron.fr/slides/spark-standalone.html)
-        
-execute:
-  eval: false
-  echo: true
+engine: knitr
+date: "2025-01-17"
 ---
 
 
