--- a/core/slides/spark-R.qmd
+++ b/core/slides/spark-R.qmd
@@ -1,8 +1,5 @@
 ---
 title: "Spark R: sparkR and sparklyr"
-
-format:
-  revealjs: 
-    footer: |
-      [Spark and R](https://stephane-v-boucheron.fr/slides/spark-sql.html)
+engine: knitr
+date: "2025-01-17"
 ---
