--- a/core/slides/spark-geo.qmd
+++ b/core/slides/spark-geo.qmd
@@ -1,8 +1,5 @@
 ---
 title: "Spark Geo"
-
-format:
-  revealjs: 
-    footer: |
-      [Spark NLP Presentation](https://stephane-v-boucheron.fr/slides/spark-sql.html)
+engine: knitr
+date: "2025-01-17"
 ---
